--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@webgpu/types": "^0.1.31",
+    "query-string": "^8.1.0",
     "typescript": "^5.0.4",
     "vite": "^4.3.3"
   },
