--- a/.github/workflows/upload.yaml
+++ b/.github/workflows/upload.yaml
@@ -10,12 +10,27 @@ jobs:
   upload-assets:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
           cache: 'yarn'
+
+      - uses: supplypike/setup-bin@v3
+        with:
+          uri: 'https://github.com/calcit-lang/calcit/releases/download/0.8.9/cr'
+          name: 'cr'
+          version: '0.8.9'
+
+      - uses: supplypike/setup-bin@v3
+        with:
+          uri: 'https://github.com/calcit-lang/calcit/releases/download/0.8.9/caps'
+          name: 'caps'
+          version: '0.8.9'
+
+      - name: "compiles calcit to js"
+        run: caps --ci && cr --emit-js --once
 
       - run: yarn && yarn vite build --base=./
         name: Build web assets
