--- a/.github/workflows/upload.yaml
+++ b/.github/workflows/upload.yaml
@@ -17,17 +17,9 @@ jobs:
           node-version: 20
           cache: 'yarn'
 
-      - uses: supplypike/setup-bin@v3
+      - uses: calcit-lang/setup-cr@0.0.3
         with:
-          uri: 'https://github.com/calcit-lang/calcit/releases/download/0.8.19/cr'
-          name: 'cr'
-          version: '0.8.19'
-
-      - uses: supplypike/setup-bin@v3
-        with:
-          uri: 'https://github.com/calcit-lang/calcit/releases/download/0.8.19/caps'
-          name: 'caps'
-          version: '0.8.19'
+          version: "0.8.50"
 
       - name: "compiles calcit to js"
         run: caps --ci && cr --emit-js --once
